# campus-guide-agent

./: .env.example  .gitignore  CONTRIBUTING.md  DATA.md  LICENSE  README.md  pyproject.toml  requirements.txt
app/: chainlit_app.py  cli.py  webui.py
config/: default.yaml
config/universities/: demo_university.yaml  hnie.yaml
core/: __init__.py  config.py
core/ingest/: __init__.py  base.py  markdown_loader.py  splitter.py  web_loader.py
core/llm/: __init__.py  base.py  qwen_api.py  qwen_ollama.py
core/pipeline/: __init__.py  prompt_templates.py  rag_chain.py
core/retrieval/: __init__.py  embedder.py  reranker.py  retriever.py  vector_store.py
core/tools/: __init__.py  base.py  route_planner.py  tool_registry.py
data/demo_university/campus/: 新生FAQ.md  校园地图.md
data/demo_university/food/: 食堂指南.md
data/demo_university/teachers/: 外语学院.md  计算机学院.md
data/hnie/campus/: 学校概况.md  学生资助.md  新生入学指南.md  校园服务指南.md  院系设置.md
data/hnie/food/: 食堂指南.md
data/hnie/teachers/: 商学院.md  电气与信息工程学院.md
docs/: PRD.md  TASK_BREAKDOWN.md
plugins/: __init__.py
plugins/example_university/: __init__.py  canteen_crawler.py
scripts/: decode_whistle.py  download_models.py  extract_har.py  init_db.py
tests/: test_reranker.py  test_retrieval.py  test_splitter.py
