[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "campus-guide-agent"
version = "0.1.0"
description = "为每所大学打造专属 AI 新生指南 — 基于 LangChain + Qwen 的 RAG 系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Campus Guide Agent Contributors"}
]
keywords = ["rag", "langchain", "qwen", "campus", "chatbot", "university"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "transformers>=4.45.0",
    "torch>=2.4.0",
    "dashscope>=1.20.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
webui = ["streamlit>=1.35.0"]
dev = ["pytest>=8.0.0", "pytest-cov>=5.0.0", "black>=24.0.0", "ruff>=0.5.0"]

[project.scripts]
cga = "app.cli:main"
cga-init = "scripts.init_db:main"
cga-download = "scripts.download_models:main"

[tool.setuptools.packages.find]
include = ["core*", "app*", "plugins*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: 需要下载模型的慢速测试",
]
